--- a/index.html
+++ b/index.html
@@ -314,74 +314,17 @@
                 </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="container" id="games-container">
+        <div class="col-12">
+            <h1 class="h1-games-retro">Reviews - <span class="gold">G(OLD)</span></h1>
+        </div>
+        <div class="row gx-md-5">
             <div class="col-12 col-md-6" id="section-reviews">
                 <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
-                <div class="small-container">
-                    <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
-                    </a>
-                <div class="row">
-                    <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
-                <div class="small-container">
-                    <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
-                    </a>
-                <div class="row">
-                    <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
-                <div class="small-container">
-                    <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
-                    </a>
-                <div class="row">
-                    <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
-                <div class="small-container">
-                    <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
-                    </a>
-                <div class="row">
-                    <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
-                <div class="small-container">
-                    <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
-                    </a>
-                <div class="row">
-                    <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
-                <div class="small-container">
+                <div class="small-container" id="small-container-retro">
                     <a href="#">
                         <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
                     </a>
