--- a/Login.html
+++ b/Login.html
@@ -6,11 +6,41 @@
     <title>Login</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="login.css">
 
 </head>
 <body>
-
+    <!-- _________HEADER__________ -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" data-bs-theme="dark">
+  <div class="container-fluid mx-5">
+    <a class="navbar-brand" href="index.html">PING</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto align-items-center">
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" id="nav-botao" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Games
+              </a>
+              <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Reviews</a></li>
+                  <li><a class="dropdown-item" href="#">G(old)</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">New</a></li>
+              </ul>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link active"  id="nav-botao" aria-current="page" href="#">News</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Login.html"><i class="bi bi-person-circle roxo"></i></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
     <!-- ________________________________________ -->
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <!-- ________________________________________ -->
