--- a/index.html
+++ b/index.html
@@ -250,66 +250,66 @@
                 </div>
             </div>
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="#"><img src="img/sekiro2.png" id="img2"></a></div>
                 <div class="small-container">
                     <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                        <h2>Sekiro: Shadows Die Twice: Espadas afiadas e sofrimento! </h2>
                     </a>
                 <div class="row">
                     <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                        Confesso que, à primeira vista, Sekiro: Shadows Die Twice me transmitiu um semblante inocente.
                     </div>
                 </div>
                 </div>
             </div>
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="#"><img src="img/re8.jpg" id="img2"></a></div>
                 <div class="small-container">
                     <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                        <h2>Resident Evil VIIlage: Sustos, monstros e adrenalina.</h2>
                     </a>
                 <div class="row">
                     <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                        Neste novo jogo de Resident Evil, mais uma vez o jogador vive uma história protagonizada por Ethan, personagem principal de RE 7:
                     </div>
                 </div>
                 </div>
             </div>
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="#"><img src="img/stray.jpg" id="img2"></a></div>
                 <div class="small-container">
                     <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                        <h2>Stray: Explorando um Mundo robótico com um Gato Curioso.</h2>
                     </a>
                 <div class="row">
                     <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                        Stray é fofo, divertido e muito emocionante. Começamos Stray ao lado de nossa família..
                     </div>
                 </div>
                 </div>
             </div>
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="#"><img src="img/imagem_2023-08-31_092101118.png" id="img2"></a></div>
                 <div class="small-container">
                     <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                        <h2>Need for Speed Unbound: A essência da pilotagem trazida de volta.</h2>
                     </a>
                 <div class="row">
                     <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                        O estilo artístico de Unbound assustou à primeira vista. Quando o primeiro trailer do novo jogo de uma aclamada série foi 
                     </div>
                 </div>
                 </div>
             </div>
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="#"><img src="img/mw2.jpg" id="img2"></a></div>
                 <div class="small-container">
                     <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                        <h2>Call of Duty: Modern Warfare 2 - Uma Explosiva Jornada de Combate Intenso!</h2>
                     </a>
                 <div class="row">
                     <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                        Quem esperava muitas mudanças ou uma revolução neste game, pode acalmar os ânimos. E isso é uma boa notícia
                     </div>
                 </div>
                 </div>
@@ -325,53 +325,53 @@
         </div>
         <div class="row gx-md-5">
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="#"><img src="img/chrono trigger.png" id="img2"></a></div>
                 <div class="small-container" id="small-container-retro">
                     <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                        <h2>Chrono Trigger: Uma Jornada através do Tempo.</h2>
                     </a>
                 <div class="row">
                     <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                        Chrono Trigger é um clássico do Super Nintendo, mas que foi relançado algumas vezes ao longo dos anos, inclusive para PlayStation 1, Nintendo DS e, ma
                     </div>
                 </div>
                 </div>
             </div>
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="#"><img src="img/Need-for-Speed-Most-Wanted-Remake-premiera-768x432 (1).jpg" id="img2"></a></div>
                 <div class="small-container" id="small-container-retro">
                     <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                        <h2>Need for Speed: Most Wanted - Domine as Ruas da Cidade.</h2>
                     </a>
                 <div class="row">
                     <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                        Se há uma coisa certa na vida é que, com qualquer lançamento de novo sistema, você terá pelo menos dois ou três novos
                     </div>
                 </div>
                 </div>
             </div>
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="#"><img src="img/Crash-Bandicoot-PS1 (1).jpg" id="img2"></a></div>
                 <div class="small-container" id="small-container-retro">
                     <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                        <h2>Crash Bandicoot: Girando e Explodindo no PS1!</h2>
                     </a>
                 <div class="row">
                     <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                        Ao mergulhar na nostálgica experiência de jogar Crash Bandicoot no PlayStation 1
                     </div>
                 </div>
                 </div>
             </div>
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="#"><img src="img/jimmy (1) (1).png" id="img2"></a></div>
                 <div class="small-container" id="small-container-retro">
                     <a href="#">
-                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                        <h2>Guitar Hero 3: Seja uma Lenda do Rock!</h2>
                     </a>
                 <div class="row">
                     <div class="col-12 text-truncate">
-                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                        Guitar Hero III: Legends of Rock, lançado em 2007, é um marco indiscutível na história dos jogos musicais. Ao pegar a lendária guitarra de plástico, os jogadores são
                     </div>
                 </div>
                 </div>
@@ -388,12 +388,12 @@
         <div class="card mb-3" id="card-news" style="max-width: 800px; max-height: 200px;">
             <div class="row g-0">
               <div class="col-md-4" id="card-img">
-                <a href="#"><img src="img/baldurs-gate-3 (3).jpg" class="img-fluid" id="-card-img" alt=""></a>
+                <a href="#"><img src="img/starfield-dinossauros_yrN9aJc (1).jpg" class="img-fluid" id="-card-img" alt=""></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">Card title</a></h5>
-                  <p class="card-text text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h4 class="card-title"><a href="#" id="card-title">A história por trás de Starfield, o jogo que demorou 25 anos para nascer.</a></h5>
+                  <p class="card-text text-light">Como a Bethesda criou seu novo RPG espacial, inspirado em clássicos da ficção científica e em sua própria paixão pelo cosmos.</p>
                   <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
                 </div>
               </div>
@@ -403,12 +403,12 @@
         <div class="card mb-3" id="card-news" style="max-width: 800px; max-height: 200px;">
             <div class="row g-0">
               <div class="col-md-4" id="card-img">
-                <a href="#"><img src="img/baldurs-gate-3 (3).jpg" class="img-fluid" id="-card-img" alt=""></a>
+                <a href="#"><img src="img/heineken.png" class="img-fluid" id="-card-img" alt=""></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">Card title</a></h5>
-                  <p class="card-text text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h4 class="card-title"><a href="#" id="card-title">Conheça a geladeira gamer da Heineken que resfria a cerveja e o PC.</a></h5>
+                  <p class="card-text text-light">A Heineken, conhecida mundialmente por suas cervejas, decidiu entrar no universo gamer de uma maneira inusitada.</p>
                   <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
                 </div>
               </div>
@@ -418,12 +418,12 @@
         <div class="card mb-3" id="card-news" style="max-width: 800px; max-height: 200px;">
             <div class="row g-0">
               <div class="col-md-4" id="card-img">
-                <a href="#"><img src="img/baldurs-gate-3 (3).jpg" class="img-fluid" id="-card-img" alt=""></a>
+                <a href="#"><img src="img/jogos xbox.jpg" class="img-fluid" id="-card-img" alt=""></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">Card title</a></h5>
-                  <p class="card-text text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h4 class="card-title"><a href="#" id="card-title">Xbox: jogos com até 90% de desconto para Xbox One e Series S|X</a></h5>
+                  <p class="card-text text-light">Aproveite as ofertas imperdíveis da Microsoft Store e garantea os melhores títulos da sua plataforma favorita.</p>
                   <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
                 </div>
               </div>
@@ -433,12 +433,12 @@
         <div class="card mb-3" id="card-news" style="max-width: 800px; max-height: 200px;">
             <div class="row g-0">
               <div class="col-md-4" id="card-img">
-                <a href="#"><img src="img/baldurs-gate-3 (3).jpg" class="img-fluid" id="-card-img" alt=""></a>
+                <a href="#"><img src="img/news/playstation-plus.jpg" class="img-fluid" id="-card-img" alt=""></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">Card title</a></h5>
-                  <p class="card-text text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h4 class="card-title"><a href="#" id="card-title">PlayStation Plus aumenta preço do plano anual no Brasil; veja os novos valores.</a></h5>
+                  <p class="card-text text-light">Serviço de assinatura da Sony reajusta seus valores para acompanhar a inflação e o mercado internacional.</p>
                   <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
                 </div>
               </div>
@@ -448,12 +448,12 @@
         <div class="card mb-3" id="card-news" style="max-width: 800px; max-height: 200px;">
             <div class="row g-0">
               <div class="col-md-4" id="card-img">
-                <a href="#"><img src="img/baldurs-gate-3 (3).jpg" class="img-fluid" id="-card-img" alt=""></a>
+                <a href="#"><img src="img/news/diabloiv.png" class="img-fluid" id="-card-img" alt=""></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">Card title</a></h5>
-                  <p class="card-text text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h4 class="card-title"><a href="#" id="card-title">Diablo IV entra em promoção e dá bônus para jogadores; veja os preços.</a></h5>
+                  <p class="card-text text-light">O novo capítulo da saga de RPG de ação da Blizzard está com descontos imperdíveis.</p>
                   <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
                 </div>
               </div>
@@ -463,12 +463,12 @@
         <div class="card mb-3" id="card-news" style="max-width: 800px; max-height: 200px;">
             <div class="row g-0">
               <div class="col-md-4" id="card-img">
-                <a href="#"><img src="img/baldurs-gate-3 (3).jpg" class="img-fluid" id="-card-img" alt=""></a>
+                <a href="#"><img src="img/news/baldursgate.png" class="img-fluid" id="-card-img" alt=""></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">Card title</a></h5>
-                  <p class="card-text text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h4 class="card-title"><a href="#" id="card-title">Baldur's Gate 3 tem decepcionado jogadores que escolheram caminho do mal.</a></h5>
+                  <p class="card-text text-light">O RPG de fantasia da Larian Studios apresenta uma narrativa desbalanceada e limitada para quem opta por alinhamentos malignos, segundo críticas dos fãs.</p>
                   <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
                 </div>
               </div>
